--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="lib/bsh-core-2.0b4.jar"/>
+	<classpathentry kind="lib" path="lib/cglib-nodep-2.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3-sources.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-library-1.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-library-1.3-sources.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-unit-test-1.3-sources.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-unit-test-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-junit3-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-junit4-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-legacy-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-script-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/objenesis-1.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
